js/src/tests/test262/built-ins/NativeErrors/TypeError/prototype.js
assert
.
sameValue
(
TypeError
.
prototype
Object
.
getPrototypeOf
(
new
TypeError
)
)
;
verifyProperty
(
TypeError
"
prototype
"
{
writable
:
false
enumerable
:
false
configurable
:
false
}
)
;
reportCompare
(
0
0
)
;
